# zhuque

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/api/: auth.rs  dependence.rs  env.rs  mod.rs  notification.rs  system.rs  task.rs  task_group.rs
src/models/: config.rs  db.rs  env.rs  mod.rs
src/scheduler/: mod.rs
src/services/: dependence.rs  env.rs  executor.rs  mod.rs  notification.rs  script.rs  task.rs
web/: package-lock.json  package.json
web/src/api/: dependence.ts  env.ts  notification.ts  task.ts
web/src/layouts/: BasicLayout.tsx
web/src/pages/: Config.tsx  Dependences.tsx  Env.tsx  Logs.tsx  Notifications.tsx  Scripts.tsx  Tasks.tsx
web/src/router/: index.tsx
web/src/types/: index.ts
