[package]
name = "zhuque"
version = "1.3.3"
edition = "2021"

[dependencies]
# Web框架
axum = { version = "0.7", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io", "io-util"] }
futures = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

# 定时任务
tokio-cron-scheduler = "0.10"
cron = "0.12"
uuid = { version = "1.0", features = ["v4"] }

# 日期时间
chrono = { version = "0.4", features = ["serde"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# 配置
config = "0.14"

# 文件操作
walkdir = "2"

# 压缩包处理
zip = "2.2"
tar = "0.4"
flate2 = "1.0"

# 异步流
async-stream = "0.3"

# 认证
jsonwebtoken = "9"
bcrypt = "0.15"
totp-rs = "5.0"
base32 = "0.4"
qrcode = "0.14"
image = "0.25"
rand = "0.8"

# 懒加载静态变量
once_cell = "1.19"

# 系统信息
sysinfo = "0.30"

# WebDAV 客户端
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "json"] }

# 邮件发送
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "builder", "smtp-transport"], default-features = false }

# 签名/编码（钉钉、飞书）
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2.1"

# 终端 (仅非 Android 平台)
[target.'cfg(not(target_os = "android"))'.dependencies]
portable-pty = "0.8"

# 内存分配器
tikv-jemallocator = { version = "0.6", optional = true }
tikv-jemalloc-ctl = { version = "0.6", optional = true, features = ["stats"] }
libc = "0.2.182"

[features]
default = ["jemalloc"]
jemalloc = ["tikv-jemallocator", "tikv-jemalloc-ctl"]

[profile.release]
opt-level = "z"     # 优化体积
lto = true          # 链接时优化
codegen-units = 1   # 更好的优化
strip = true        # 移除符号表

# jemalloc 配置：激进的内存回收策略
[profile.release.package.tikv-jemallocator]
opt-level = 3
